--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Brush Script MT',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -19,6 +19,10 @@ li{
 }
 
 ul{
+  margin: 0;
+  padding: 0;
+}
+h1, h2, h3, h4, h5, h6, p{
   margin: 0;
   padding: 0;
 }
