--- a/src/components/leftMenu/LeftMenu.module.scss
+++ b/src/components/leftMenu/LeftMenu.module.scss
@@ -6,9 +6,31 @@
     gap: 10px;
 }
 .title{
+    font-weight: bold;
     border-bottom: solid 1px;
-    padding: 5px 5px 5px 0 ;
+    padding: 5px 5px 5px 3px ;
+    &:hover,
+    :global(.active) {
+        border-bottom: none;
+        border-radius: 5px;
+        border-color: #DCCAE9;
+        background-color: #DCCAE9;
+        box-shadow: 0 0 3px 1px;
+    }
 }
 .subTitle{
     margin-left: 10px;
+    font-weight: bold;
+    border-bottom: solid 1px;
+    padding: 5px 5px 5px 3px ;
+
+    &:hover {
+        border-bottom: none;
+        border-radius: 5px;
+        border-color: #DCCAE9;
+        background-color: #DCCAE9;
+        box-shadow: 0 0 3px 1px;
+    }
+
+
 }
