--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -3,7 +3,7 @@ h2{
 }
 
 .header {
-   position:sticky;
+   position:fixed;
     top: -1;
     z-index: 1100;
     justify-content: center;
@@ -54,6 +54,7 @@ h2{
   }
   
   .main{
+    padding-top: 100px;
     background-color: white;
   }
 
