--- a/src/components/KitchenList/KitchenItem/kitchen-item.module.scss
+++ b/src/components/KitchenList/KitchenItem/kitchen-item.module.scss
@@ -1,25 +1,62 @@
 .cardBody{
-
+    padding: 10px !important;
 }
-
-.listItem{
-
+.Card{
+    border: none !important;
+    box-shadow: 5px 5px 30px rgb(130, 124, 124);
 }
+.imgContainer{
+    position: relative;
+    overflow: hidden;
+    border-radius: 5px;
+}
+.imgProduct{
+    width: 100%; /* Сделать изображение шириной 100% от родительского контейнера */
+    height: auto;
+}
+.imgContainer::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%; /* Высота, которую вы хотите затенить (например, 50% затенения) */
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.7)); /* Градиентное затемнение */
+  }
+
+
 .title{
-    // white-space: nowrap;
-    // overflow: hidden;
-    // text-overflow: ellipsis;
-    // max-width: 100%;
-    // display: block;
+    font-size: 0.9em;
+    line-height: 1.2em;
+    height: 2.4em;
+    margin-bottom: 5px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    max-width: 100%;
+
+}
+.spanText{
+    display: block;
+    margin-bottom: 5px;
+}
+
+.text{
+    margin-bottom: 5px;
+    font-size: 0.8em;
     line-height: 1.2em;
     height: 2.4em;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     overflow: hidden;
-    // text-overflow: ellipsis;
     max-width: 100%;
 }
+
+
 .btnDetailes{
     border-radius: 0px 0px 5px 5px !important ;
+    width: 100% !important;
+    cursor: pointer;
 }
