--- a/src/components/Lists/BarList/BarItem/bar-item.module.scss
+++ b/src/components/Lists/BarList/BarItem/bar-item.module.scss
@@ -57,6 +57,8 @@
 
 .btnDetailes{
     border-radius: 0px 0px 5px 5px !important ;
+    border: none !important;
     width: 100% !important;
     cursor: pointer;
+    background-color: #3ec23e !important;
 }
