--- a/src/components/leftMenu/LeftMenu.module.scss
+++ b/src/components/leftMenu/LeftMenu.module.scss
@@ -13,8 +13,8 @@
     :focus {
         border-bottom: none;
         border-radius: 5px;
-        border-color: #DCCAE9;
-        background-color: #DCCAE9;
+        border-color: #008cff;
+        background-color: #008cff;
         box-shadow: 0 0 3px 1px;
     }
 }
@@ -29,8 +29,8 @@
     :focus {
         border-bottom: none;
         border-radius: 5px;
-        border-color: #DCCAE9;
-        background-color: #DCCAE9;
+        border-color: #008cff;
+        background-color: #008cff;
         box-shadow: 0 0 3px 1px;
     }
 
