--- a/src/components/Form/FormAddKitchen/form-add-kitchen.module.scss
+++ b/src/components/Form/FormAddKitchen/form-add-kitchen.module.scss
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: solid 1px;
     border-radius: 5px;
     padding: 10px;
     width: 100%;
+    box-shadow: 0px 0px 30px rgb(130, 124, 124);
 }
 .titleForm{
     margin-bottom: 10px;
