--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,6 +1,12 @@
 @import '~bootstrap/scss/bootstrap';
 @import 'modern-normalize/modern-normalize';
 
+:root {
+  --family: 'Balsamiq Sans', cursive;
+  --color-blue: hsl(270deg 75% 60%);
+  --color-green: #3ec23e;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
