--- a/src/components/Form/FormAddKitchen/form-add-kitchen.module.scss
+++ b/src/components/Form/FormAddKitchen/form-add-kitchen.module.scss
@@ -8,7 +8,9 @@
     box-shadow: 0px 0px 30px rgb(130, 124, 124);
 }
 .titleForm{
-    margin-bottom: 10px;
+    font-family: var(--family);
+    font-weight: 700;
+    margin-bottom: 15px;
 }
 .boxFormInput{
     display: flex;
@@ -16,10 +18,14 @@
     margin-bottom: 10px;
 }
 .formLabel{
+    font-family: var(--family);
+    font-weight: 400;
+    // font-style: italic;
     margin-bottom: 5px;
 }
 
 .formInput{
+    font-family: var(--family);
     border: solid 1px;
     border-radius: 5px;
     margin-bottom: 10px;
@@ -33,6 +39,10 @@
 }
 
 .erorrRequired{
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: var(--family);
+    font-style: italic;
     color: red;
+}
+.submitBtn{
+    font-family: var(--family);
 }
