--- a/src/components/Lists/BarList/bar-list.module.scss
+++ b/src/components/Lists/BarList/bar-list.module.scss
@@ -1,3 +1,9 @@
+.listCehGroupBox:last-child{
+    margin-bottom: 50px;
+}
+.cehGroupBox{
+    margin-bottom: 20px;
+}
 .listBox{
     grid-template-columns: 49%  49%;
     display: grid;
@@ -10,7 +16,11 @@
     display: grid;
     grid-gap: 10px;
 }
-
+.titleCeh{
+    font-family: var(--family);
+    font-weight: 700;
+    margin-bottom: 10px;
+}
 .buttonGroup{
     position: fixed;
     z-index: 799;
@@ -18,6 +28,7 @@
     left: 15px;
 }
 .toggleButton{
+    font-family: var(--family);
     position: absolute;
     padding:1px 30px 1px 30px !important;
     border-radius: 10px;
