--- a/src/components/Lists/KitchenList/KitchenItem/kitchen-item.module.scss
+++ b/src/components/Lists/KitchenList/KitchenItem/kitchen-item.module.scss
@@ -26,6 +26,8 @@
 
 
 .title{
+    font-family: var(--family);
+    font-weight: 700;
     font-size: 0.9em;
     line-height: 1.2em;
     height: 2.4em;
@@ -38,11 +40,14 @@
 
 }
 .spanText{
+    font-family: var(--family);
+    // font-style: italic;
     display: block;
     margin-bottom: 5px;
 }
 
 .text{
+    font-family: var(--family);
     margin-bottom: 5px;
     font-size: 0.8em;
     line-height: 1.2em;
