--- a/src/components/Form/FormAddBar/form-add-bar.module.scss
+++ b/src/components/Form/FormAddBar/form-add-bar.module.scss
@@ -46,4 +46,6 @@
 
 .submitBtn{
     font-family: var(--family);
+    background-color: var(--ACCENT-COLOR);
+    border-color: var(--ACCENT-COLOR) !important;
 }
