--- a/src/components/Lists/BarList/BarItem/bar-item.module.scss
+++ b/src/components/Lists/BarList/BarItem/bar-item.module.scss
@@ -66,5 +66,5 @@
     border: none !important;
     width: 100% !important;
     cursor: pointer;
-    background-color: var(--color-green) !important;
+    background-color: var(--ACCENT-COLOR);
 }
