--- a/src/components/Lists/KitchenList/KitchenItem/kitchen-item.module.scss
+++ b/src/components/Lists/KitchenList/KitchenItem/kitchen-item.module.scss
@@ -65,5 +65,5 @@
     border: none !important;
     width: 100% !important;
     cursor: pointer;
-    background-color: #3ec23e !important;
+    background-color: var(--ACCENT-COLOR);
 }
