--- a/src/components/Lists/KitchenList/kitchen-list.module.scss
+++ b/src/components/Lists/KitchenList/kitchen-list.module.scss
@@ -37,4 +37,5 @@
     position: absolute;
     padding:1px 30px 1px 30px !important;
     border-radius: 10px;
+    border: var(--DIVIDER-COLOR) !important;
 }
