--- a/src/pages/MenuPage/menu-page.module.scss
+++ b/src/pages/MenuPage/menu-page.module.scss
@@ -8,3 +8,8 @@
     margin-right: 15px;
 }
 
+.pill{
+    background-color: var(--DIVIDER-COLOR) !important;
+    color: var(--PRIMARY-TEXT-COLOR);
+}
+
