--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -12,7 +12,8 @@ h2{
     height: 80px;
     margin-bottom: 20px;
     color: #fff;
-    background-image: url(./image/gradient-dynamic-purple-lines-background_23-2148995757.avif);
+    background-color: var(--DARK-PRIMARY-COLOR);
+    // background-image: url(./image/gradient-dynamic-purple-lines-background_23-2148995757.avif);
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
       0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
   }
