--- a/src/components/Lists/BarList/BarItem/bar-item.module.scss
+++ b/src/components/Lists/BarList/BarItem/bar-item.module.scss
@@ -5,23 +5,24 @@
     border: none !important;
     box-shadow: 5px 5px 30px rgb(130, 124, 124);
 }
-.imgContainer{
+.imgContainer {
     position: relative;
-    overflow: hidden;
-    border-radius: 5px;
-}
-.imgProduct{
-    width: 100%; /* Сделать изображение шириной 100% от родительского контейнера */
-    height: auto;
-}
+    border-radius: 5px 5px 0 0;
+    height: 150px;
+    width: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  } 
+  
 .imgContainer::after {
     content: "";
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 50%; /* Высота, которую вы хотите затенить (например, 50% затенения) */
-    background: linear-gradient(transparent, rgba(0, 0, 0, 0.7)); /* Градиентное затемнение */
+    height: 50%; 
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.7)); 
   }
 
 
