--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,7 +2,7 @@
 @import 'modern-normalize/modern-normalize';
 
 :root {
-  --family: 'Balsamiq Sans', cursive;
+  --family: 'Arial';
   --DARK-PRIMARY-COLOR: #7B1FA2;
   --LIGHT-PRIMARY-COLOR:#E1BEE7;
   --PRIMARY-COLOR:#9C27B0;
@@ -17,7 +17,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Arial', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Brush Script MT',
     sans-serif;
   -webkit-font-smoothing: antialiased;
