--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,7 +2,7 @@
 @import 'modern-normalize/modern-normalize';
 
 :root {
-  --family: 'Arial';
+  --family: sans-serif;
   --DARK-PRIMARY-COLOR: #7B1FA2;
   --LIGHT-PRIMARY-COLOR:#E1BEE7;
   --PRIMARY-COLOR:#9C27B0;
