--- a/src/pages/MoreInfoPage/more-info-page.module.scss
+++ b/src/pages/MoreInfoPage/more-info-page.module.scss
@@ -5,3 +5,23 @@
 .cardBody{
     padding: 5px !important;
 }
+
+.imgContainer {
+    position: relative;
+    border-radius: 5px 5px 0 0;
+    max-height: 300px !important;
+    max-width: 300px !important;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  } 
+
+  .cardImage{
+    position: relative;
+    border-radius: 5px 5px 0 0;
+    max-height: 300px !important;
+    max-width: 300px !important;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
