--- a/src/components/Lists/KitchenList/KitchenItem/kitchen-item.module.scss
+++ b/src/components/Lists/KitchenList/KitchenItem/kitchen-item.module.scss
@@ -3,7 +3,8 @@
 }
 .Card{
     border: none !important;
-    box-shadow: 5px 5px 30px rgb(130, 124, 124);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px 4px 4px 4px;
 }
 .imgContainer {
     position: relative;
