--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -5,26 +5,28 @@ h2{
 .header {
    position:fixed;
     top: -1;
-    z-index: 1100;
+    z-index: 800;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80px;
     margin-bottom: 20px;
     color: #fff;
-    background-color: var(--DARK-PRIMARY-COLOR);
+    background-color: #ffffff;
     // background-image: url(./image/gradient-dynamic-purple-lines-background_23-2148995757.avif);
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
       0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
   }
 
   .spanTitle{
+    display: block;
     font-family: 'Brush Script MT';
     font-weight: 400;
     
   }
 
   .navHeader{
+    display: flex;
+    align-items: center;
     padding-right: 16px;
     padding-left: 16px;
     padding-top: 12px;
@@ -33,32 +35,37 @@ h2{
 
   .navList{
     display: flex;
-
+    justify-content: space-between;
     align-items: center;
+    width: 100%;
     padding: 0;
     margin: 0
   }
   
   .navLink {
-    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    text-align: center;
-    display: inline-block;
-    color: rgb(255, 255, 255);
-    border: 0;
+    font-family: sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
     text-decoration: none;
-    cursor: pointer;
-    font-family: inherit;
-    font-size: 18px;
-    line-height: 24px;
-    font-style: normal;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color:var(--DARK-PRIMARY-COLOR);
+  }
+  .spanBlack {
+    color: black; 
   }
   
   .main{
+    flex-grow: 1;
     padding-top: 100px;
-    background-color: white;
+    background-color: #f5f4fa;
   }
 
   .mainBox{
+
     padding-right: 16px;
     padding-left: 16px;
   }
