--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,7 +2,7 @@
 @import 'modern-normalize/modern-normalize';
 
 :root {
-  --family: sans-serif;
+  --family:'Roboto', sans-serif;
   --DARK-PRIMARY-COLOR: #7B1FA2;
   --LIGHT-PRIMARY-COLOR:#E1BEE7;
   --PRIMARY-COLOR:#9C27B0;
@@ -11,21 +11,11 @@
   --SECONDARY-TEXT:#757575;
   --TEXT-ICONS-COLOR: #FFFFFF;
   --DIVIDER-COLOR:#BDBDBD;
-
-  
-}
-
-#root{
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  justify-content: space-between;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Arial', 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Brush Script MT',
+  font-family: -apple-system, BlinkMacSystemFont, 'Roboto',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -38,6 +28,7 @@ code {
 }
 
 li{
+  font-family: 'Roboto', sans-serif;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -48,6 +39,7 @@ ul{
   padding: 0;
 }
 h1, h2, h3, h4, h5, h6, p{
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
 }
