--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -1,71 +1,76 @@
-h2{
+h2 {
+  margin: 0;
+}
+.divBox {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between;
+}
+.header {
+  position: fixed;
+  top: -1;
+  z-index: 800;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
+  color: #fff;
+  background-color: #ffffff;
+  // background-image: url(./image/gradient-dynamic-purple-lines-background_23-2148995757.avif);
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+
+.spanTitle {
+  display: block;
+  font-family: 'Brush Script MT';
+  font-weight: 400;
+}
+
+.navHeader {
+  display: flex;
+  align-items: center;
+  padding-right: 16px;
+  padding-left: 16px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.navList {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 0;
   margin: 0;
 }
 
-.header {
-   position:fixed;
-    top: -1;
-    z-index: 800;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 20px;
-    color: #fff;
-    background-color: #ffffff;
-    // background-image: url(./image/gradient-dynamic-purple-lines-background_23-2148995757.avif);
-    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-      0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-  }
+.navLink {
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: var(--DARK-PRIMARY-COLOR);
+}
+.spanBlack {
+  color: black;
+}
 
-  .spanTitle{
-    display: block;
-    font-family: 'Brush Script MT';
-    font-weight: 400;
-    
-  }
+.main {
+  flex-grow: 1;
+  padding-top: 100px;
+  background-color: #f5f4fa;
+  height: 100%;
+}
 
-  .navHeader{
-    display: flex;
-    align-items: center;
-    padding-right: 16px;
-    padding-left: 16px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-  }
-
-  .navList{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 0;
-    margin: 0
-  }
-  
-  .navLink {
-    font-family: sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    color:var(--DARK-PRIMARY-COLOR);
-  }
-  .spanBlack {
-    color: black; 
-  }
-  
-  .main{
-    flex-grow: 1;
-    padding-top: 100px;
-    background-color: #f5f4fa;
-  }
-
-  .mainBox{
-
-    padding-right: 16px;
-    padding-left: 16px;
-  }
+.mainBox {
+  height: 100%;
+  padding-right: 16px;
+  padding-left: 16px;
+}
