--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -12,7 +12,7 @@
   }
   
   .footerLogoMobile {
-    font-family: sans-serif;
+    font-family: var(--family);
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
@@ -22,7 +22,7 @@
     justify-content: center;
     text-align: center;
     color:var(--DARK-PRIMARY-COLOR);
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 
   }
   
