--- a/src/components/Lists/BarList/BarItem/bar-item.module.scss
+++ b/src/components/Lists/BarList/BarItem/bar-item.module.scss
@@ -33,7 +33,7 @@
     font-weight: 700;
     font-size: 0.9em;
     line-height: 1.2em;
-    height: 2.4em;
+    height: 1.6em;
     margin-bottom: 5px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -44,6 +44,9 @@
 }
 .spanText{
     font-family: var(--family);
+    font-weight: 400;
+    font-size: 12px;
+    color: #8c8c8c;
     // font-style: italic;
     display: block;
     margin-bottom: 5px;
@@ -51,8 +54,8 @@
 
 .text{
     font-family: var(--family);
-    margin-bottom: 5px;
-    font-size: 0.8em;
+    margin-bottom: 10px;
+    font-size: 0.7em;
     line-height: 1.2em;
     height: 2.4em;
     display: -webkit-box;
