--- a/src/components/Form/FormAddKitchen/form-add-kitchen.module.scss
+++ b/src/components/Form/FormAddKitchen/form-add-kitchen.module.scss
@@ -28,7 +28,8 @@
     border: solid 1px;
     border-radius: 5px;
     margin-bottom: 10px;
-    height: 40px;
+    height: auto;
+    min-height: 40px;
     padding: 5px;
 }
 
