--- a/src/components/Lists/KitchenList/KitchenItem/kitchen-item.module.scss
+++ b/src/components/Lists/KitchenList/KitchenItem/kitchen-item.module.scss
@@ -3,6 +3,7 @@
 }
 .Card{
     border: none !important;
+    background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px 4px 4px 4px;
 }
@@ -32,7 +33,7 @@
     font-weight: 700;
     font-size: 0.9em;
     line-height: 1.2em;
-    height: 2.4em;
+    height: 1.6em;
     margin-bottom: 5px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -43,6 +44,9 @@
 }
 .spanText{
     font-family: var(--family);
+    font-weight: 400;
+    font-size: 12px;
+    color: #8c8c8c;
     // font-style: italic;
     display: block;
     margin-bottom: 5px;
@@ -50,8 +54,8 @@
 
 .text{
     font-family: var(--family);
-    margin-bottom: 5px;
-    font-size: 0.8em;
+    margin-bottom: 10px;
+    font-size: 0.7em;
     line-height: 1.2em;
     height: 2.4em;
     display: -webkit-box;
