--- a/src/components/Lists/KitchenList/kitchen-list.module.scss
+++ b/src/components/Lists/KitchenList/kitchen-list.module.scss
@@ -1,7 +1,3 @@
-// .listCehGroupBox{
-//     margin-bottom: 30px;
-// }
-
 .listCehGroupBox:last-child{
     margin-bottom: 50px;
 }
@@ -13,6 +9,10 @@
     display: grid;
     grid-gap: 10px;
     grid-auto-rows: minmax(200px, auto);
+}
+
+.listBox > * {
+    max-width: 280px; 
 }
 
 .learnListBox{
@@ -33,9 +33,7 @@
 }
 .toggleButton{
     font-family: var(--family);
-    font-weight: 400;
     position: absolute;
     padding:1px 30px 1px 30px !important;
     border-radius: 10px;
-    border: var(--DIVIDER-COLOR) !important;
 }
