--- a/src/pages/MoreInfoPage/more-info-page.module.scss
+++ b/src/pages/MoreInfoPage/more-info-page.module.scss
@@ -27,11 +27,13 @@
   background-position: center;
 }
 .name {
-  font-size: 32px;
+  font-family: var(--family);
+  font-weight: 500;
+  font-size: 22px;
   line-height: 1.33;
 }
 .ceh {
-  font-size: 22px;
+  font-size: 16px;
   margin-bottom: 10px;
   line-height: 1.33;
 }
@@ -41,11 +43,18 @@
   gap: 10px;
 }
 .description {
+  font-family: var(--family);
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
   color: #8c8c8c;
-  font-size: 22px;
+  font-size: 16px;
   line-height: 1.33;
 }
 
 .spanDescription {
+  font-family: var(--family);
+  font-weight: 400;
+  font-size: 14px;
   color: black;
 }
