--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -26,6 +26,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+// hr{
+//   margin: 0;
+// }
 
 li{
   font-family: 'Roboto', sans-serif;
