--- a/src/components/Lists/BarList/BarItem/bar-item.module.scss
+++ b/src/components/Lists/BarList/BarItem/bar-item.module.scss
@@ -1,76 +1,105 @@
-.cardBody{
-    padding: 10px !important;
+.cardBody {
+  padding: 10px !important;
 }
-.Card{
-    border: none !important;
-    background: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px 4px 4px 4px;
+.Card {
+  position: relative;
+  border: none !important;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px 4px 4px 4px;
 }
-.imgContainer {
-    position: relative;
-    border-radius: 5px 5px 0 0;
-    height: 150px;
-    width: auto;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  } 
-  
-.imgContainer::after {
-    content: "";
+.cardDel {
     position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50%; 
-    background: linear-gradient(transparent, rgba(0, 0, 0, 0.7)); 
+    top: 5px;
+    right: 5px;
+    width: 15px;
+    height: 10px;
+    z-index: 100;
   }
-
-
-.title{
-    font-family: var(--family);
-    font-weight: 700;
-    font-size: 0.9em;
-    line-height: 1.2em;
-    height: 1.6em;
-    margin-bottom: 5px;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    overflow: hidden;
-    max-width: 100%;
-
-}
-.spanText{
-    font-family: var(--family);
-    font-weight: 400;
-    font-size: 12px;
-    color: #8c8c8c;
-    // font-style: italic;
-    display: block;
-    margin-bottom: 5px;
+.imgContainer {
+  position: relative;
+  border-radius: 5px 5px 0 0;
+  height: 150px;
+  width: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-.text{
-    font-family: var(--family);
-    margin-bottom: 10px;
-    font-size: 0.7em;
-    line-height: 1.2em;
-    height: 2.4em;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    overflow: hidden;
-    max-width: 100%;
+.imgContainer::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.7));
 }
 
+.title {
+  font-family: var(--family);
+  font-weight: 700;
+  font-size: 0.9em;
+  line-height: 1.2em;
+  height: 1.6em;
+  margin-bottom: 5px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  max-width: 100%;
+}
+.spanText {
+  font-family: var(--family);
+  font-weight: 400;
+  font-size: 12px;
+  color: #8c8c8c;
+  // font-style: italic;
+  display: block;
+  margin-bottom: 5px;
+}
 
-.btnDetailes{
-    font-family: var(--family);
-    border-radius: 0px 0px 5px 5px !important ;
-    border: none !important;
-    width: 100% !important;
-    cursor: pointer;
-    background-color: var(--ACCENT-COLOR);
+.text {
+  font-family: var(--family);
+  margin-bottom: 10px;
+  font-size: 0.7em;
+  line-height: 1.2em;
+  height: 2.4em;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.btnDetailes {
+  font-family: var(--family);
+  border-radius: 0px 0px 5px 5px !important ;
+  border: none !important;
+  width: 100% !important;
+  cursor: pointer;
+  background-color: var(--ACCENT-COLOR);
+}
+
+.modalBox {
+  height: auto;
+  width: 300px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: white;
+}
+
+.modalMain {
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+}
+
+.modaButton {
+  // flex-grow: 1;
+  width: 48%;
+  border-radius: 5px;
+  color: white;
+  padding: 10px;
 }
