--- a/src/components/Lists/BarList/bar-list.module.scss
+++ b/src/components/Lists/BarList/bar-list.module.scss
@@ -4,6 +4,11 @@
 .cehGroupBox{
     margin-bottom: 20px;
 }
+
+.listContainer{
+    display: grid;
+    place-items: center;
+}
 .listBox{
     grid-template-columns: 49%  49%;
     display: grid;
@@ -11,7 +16,7 @@
     grid-auto-rows: minmax(200px, auto);
 }
 .listBox > * {
-    max-width: 280px; 
+    max-width: 220px; 
 }
 
 .learnListBox{
@@ -35,4 +40,12 @@
     position: absolute;
     padding:1px 30px 1px 30px !important;
     border-radius: 10px;
+}
+
+.noEmpty{
+    font-family: var(--family);
+    font-size: 22px;
+    font-weight: 500;
+    color: #8c8c8c;
+    text-align: center;
 }
