--- a/src/components/Lists/KitchenList/kitchen-list.module.scss
+++ b/src/components/Lists/KitchenList/kitchen-list.module.scss
@@ -4,6 +4,10 @@
 .cehGroupBox{
     margin-bottom: 20px;
 }
+.listContainer{
+    display: grid;
+    place-items: center;
+}
 .listBox{
     grid-template-columns: 49%  49%;
     display: grid;
@@ -12,7 +16,7 @@
 }
 
 .listBox > * {
-    max-width: 280px; 
+    max-width: 220px; 
 }
 
 .learnListBox{
@@ -31,9 +35,27 @@
     bottom: 10px;
     left: 15px;
 }
+// .listContainer{
+//     display: flex;
+//     justify-content: center;
+// }
 .toggleButton{
     font-family: var(--family);
     position: absolute;
     padding:1px 30px 1px 30px !important;
     border-radius: 10px;
 }
+
+.noEmpty{
+    font-family: var(--family);
+    font-size: 22px;
+    font-weight: 500;
+    color: #8c8c8c;
+    text-align: center;
+}
+
+@media screen and (min-width: 820px) {
+    .listBox{
+        grid-template-columns: 25%  25% 25% 25%;
+    }
+  }
