--- a/src/pages/AddProduct/add-product.module.scss
+++ b/src/pages/AddProduct/add-product.module.scss
@@ -37,3 +37,15 @@
     font-size: 16px;
     line-height: normal;
 }
+
+@media screen and (min-width: 820px) {
+    .btnChangeToBar{
+        left: 20%;
+    }
+    
+    .btnChangeTooKitchen{
+        right: 20%;
+    }
+  }
+
+
