--- a/src/components/Lists/KitchenList/KitchenItem/kitchen-item.module.scss
+++ b/src/components/Lists/KitchenList/KitchenItem/kitchen-item.module.scss
@@ -77,6 +77,7 @@
 }
 
 .btnDetailes {
+  font-family: var(--family);
   border-radius: 0px 0px 5px 5px !important ;
   border: none !important;
   width: 100% !important;
