--- a/src/components/Lists/KitchenList/kitchen-list.module.scss
+++ b/src/components/Lists/KitchenList/kitchen-list.module.scss
@@ -4,19 +4,20 @@
 .cehGroupBox{
     margin-bottom: 20px;
 }
-.listContainer{
-    display: grid;
-    place-items: center;
-}
+// .listContainer{
+
+// }
 .listBox{
-    grid-template-columns: 49%  49%;
-    display: grid;
-    grid-gap: 10px;
-    grid-auto-rows: minmax(200px, auto);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .listBox > * {
-    max-width: 220px; 
+    // flex-grow: auto;
+    width: 170px; 
 }
 
 .learnListBox{
@@ -35,10 +36,6 @@
     bottom: 10px;
     left: 15px;
 }
-// .listContainer{
-//     display: flex;
-//     justify-content: center;
-// }
 .toggleButton{
     font-family: var(--family);
     position: absolute;
@@ -54,8 +51,3 @@
     text-align: center;
 }
 
-@media screen and (min-width: 820px) {
-    .listBox{
-        grid-template-columns: 25%  25% 25% 25%;
-    }
-  }
