--- a/src/pages/MoreInfoPage/more-info-page.module.scss
+++ b/src/pages/MoreInfoPage/more-info-page.module.scss
@@ -3,11 +3,30 @@
   justify-content: center;
 }
 .Card {
+  position: relative;
   width: 100%;
   border: none !important;
+  margin-bottom: 20px;
   background-color: transparent !important;
 }
+.backLink{
+  position: absolute;
+  top: -30px;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  z-index: 100;
+  border-color: var(--ACCENT-COLOR) !important;
+}
 
+.spanGo{
+  font-family: var(--family);
+  font-weight: 300;
+  font-size: 16px;
+  line-height: normal;
+}
 .cardBody {
   padding: 5px !important;
 }
