--- a/src/components/Conception/conception.module.scss
+++ b/src/components/Conception/conception.module.scss
@@ -12,6 +12,7 @@
 
 .Text{
     font-family: 'Roboto', sans-serif;
+    line-height: 25px;
     &:first-letter {
         margin-left: 15px;
       }
