--- a/src/components/Form/FormAddBar/form-add-bar.module.scss
+++ b/src/components/Form/FormAddBar/form-add-bar.module.scss
@@ -31,11 +31,41 @@
   border-radius: 5px;
   margin-bottom: 10px;
   height: auto;
+  width: 100%;
   min-height: 40px;
   padding: 5px;
   transition: all 0.1s ease;
 }
-.errorLable{
+
+.formInputIngredients {
+  height: 80px;
+  line-height: 20px;
+}
+
+.formInputDescription {
+  height: 120px;
+}
+
+.formInputAmountSpan {
+  position: relative;
+  width: 100%;
+
+  &::before {
+    content: "гр.";
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    height: 38px;
+    width: 40px;
+    display: flex;
+    background-color: #d4d2d094;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0 5px 5px 0;
+  }
+}
+
+.errorLable {
   color: red;
 }
 .errorInput {
@@ -70,13 +100,13 @@
   color: #aaa;
 }
 
-  @media screen and (min-width: 820px) {
-    .boxForm{
-        display: flex;
-        justify-content: center;
-        width: 100%;
-    }
-    .form {
-      width: 60%;
-    }
+@media screen and (min-width: 820px) {
+  .boxForm {
+    display: flex;
+    justify-content: center;
+    width: 100%;
   }
+  .form {
+    width: 60%;
+  }
+}
