--- a/src/components/Lists/LearnItemForList/learn-item.module.scss
+++ b/src/components/Lists/LearnItemForList/learn-item.module.scss
@@ -9,3 +9,14 @@
   font-weight: 400 !important;
   font-size: 16px !important;
 }
+
+.bodyAmountLearnCard{
+  font-family: var(--family) !important;
+  text-align:center;
+  color: #8c8c8c;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+}
+.spanbBodyAmountLearnCard{
+  color: #8c8c8c;
+}
