--- a/src/pages/MoreInfoPage/more-info-page.module.scss
+++ b/src/pages/MoreInfoPage/more-info-page.module.scss
@@ -73,7 +73,7 @@
   flex-direction: column;
   color: #8c8c8c;
   font-size: 16px;
-  line-height: 1.33;
+  line-height: 25px;
 }
 
 .spanDescription {
