--- a/src/components/Lists/BarList/bar-list.module.scss
+++ b/src/components/Lists/BarList/bar-list.module.scss
@@ -1,5 +1,12 @@
-
 .filterSelect {
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    white-space: nowrap;
+    margin-left: 5px;
+    text-align: center;
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -7,9 +14,11 @@
     color: white;
     padding: 10px;
     border: none;
-    width: 40px;
+    max-width: auto;
+    height: 38px;
     border-radius: 20px; 
     cursor: pointer;
+    z-index: 1;
   }
   
 .listCehGroupBox:last-child{
@@ -46,7 +55,7 @@
 .buttonGroup{
     position: fixed;
     z-index: 799;
-    bottom: 10px;
+    bottom: 15px;
     left: 15px;
 }
 // .listContainer{
@@ -54,10 +63,13 @@
 //     justify-content: center;
 // }
 .toggleButton{
+    display: flex;
+    align-items: center;
     font-family: var(--family);
     position: absolute;
-    padding:1px 30px 1px 30px !important;
-    border-radius: 10px;
+    padding: 1px 30px 1px 30px !important;
+    border-radius: 20px;
+    height: 38px;
 }
 
 .noEmpty{
@@ -71,5 +83,11 @@
 @media screen and (max-width: 375px) {
     .listBox {
         grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    .filterSelect{
+        max-width: 100px;
     }
   }
