--- a/src/components/Lists/BarList/bar-list.module.scss
+++ b/src/components/Lists/BarList/bar-list.module.scss
@@ -1,12 +1,16 @@
 .filterSelect {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
+    text-align: center;
     text-overflow: ellipsis; 
     white-space: nowrap;
     margin-left: 5px;
-    text-align: center;
     position: fixed;
     bottom: 15px;
-    right: 15px;
+    right: 16px;
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -18,7 +22,7 @@
     height: 38px;
     border-radius: 20px; 
     cursor: pointer;
-    z-index: 1;
+    z-index: 1000;
   }
   
 .listCehGroupBox:last-child{
@@ -56,7 +60,7 @@
     position: fixed;
     z-index: 799;
     bottom: 15px;
-    left: 15px;
+    left: 16px;
 }
 // .listContainer{
 //     display: flex;
@@ -90,4 +94,8 @@
     .filterSelect{
         max-width: 100px;
     }
+
+    .toggleButton {
+        padding: 1px 20px 1px 20px !important;
+      }
   }
