--- a/src/components/Form/FormAddBar/form-add-bar.module.scss
+++ b/src/components/Form/FormAddBar/form-add-bar.module.scss
@@ -84,6 +84,10 @@
   border-color: var(--ACCENT-COLOR) !important;
 }
 
+.stopBtn{
+  margin-top: 10px;
+}
+
 .buttonUpload {
   font-family: var(--family);
   padding: 10px;
